
Apache Sanselan Release Notes 
-----------------------------

Apache Sanselan is a pure-Java image library for reading and writing a variety of image formats.

See the project site for details and sample code.

http://incubator.apache.org/sanselan/site/index.html


Version History:
----------------

Next Release
------------
 * Fixed a problem in the metadata example code not using exact matching for GPS values.
 * Fixed a possible NPE in Sanselan.getICCProfile pointed out by Jon Weygandt.
 * Fixed a bug in which gifs have incorrect size information in the the Logical Screen Descriptor.
   This appears to be a bug in how Microsoft Office writes gifs.
   The Image Descriptor has the correct value.
 * Added accessor methods for a number of ImageInfo properties.
 * Applied patch contributed by Nicolas Richeton, adding getEXIFThumbnailSize() and getEXIFThumbnailData() 
 	methods to JpegImageMetadata.
 * Fixed a couple of platform-dependent paths in the tests.
 * Constant-ized the magic numbers used when guessing formats.  
 * Added a test for the format guessing.

Release 0.97
------------
	
 * Rewrote the info.txt files for many images in the sample image library to clarify contribution to project.
 * Removed the images from the www.wpclipart.com Public Domain library.
 * Improved the examples illustrating how to change EXIF metadata.
 * Applied a patch from Niall Pemberton around jdk1.5 compatibility:
	"""
	Sanselan claims JDK 1.4 compatibility, but a JDK 1.5 method (Class's getSimpleName() [1]) has been used in JpegRewriter
	"""
 * Applied a "Build Improvements" patch from Niall Pemberton:
	"""
	I took a look at the propsed 0.96 relelase and have some suggestions to improve the build:
	 * Add standard manifest entries to jar
	 * Lock down version numbers for maven compiler, surefire and javadoc plugins
	 * generate sources jar for the release
	 * include the RELEASE-NOTES in the binary distribution
	 * include NOTICE/LICENSE files in the javadoc jar
	"""
